<resources>
    <string name="app_name">ERISM App</string>
    <string name="nav_string_employee">Employee</string>
    <string name="nav_string_retirement_benefit">Benefit</string>
    <string name="nav_string_retirement_plan">Plan</string>
    <string name="nav_string_payout">Payout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_employee_string_FAB">Add New Employee</string>
    <string name="string_first_name">First Name</string>
    <string name="string_last_name">Last Name</string>
    <string name="string_date_format">mm-dd-yyyy</string>
    <string name="string_job_title">Job title</string>
    <string name="string_salary">Salary</string>
    <string name="string_hire_date">Hire Date</string>
    <string name="string_date_of_birth">Date of birth</string>
    <string name="string_tv_id_no">ID No:</string>
    <string name="string_tv_date_of_birth">Date of birth:</string>
    <string name="string_tv_salary">Salary: $</string>
    <string name="string_tv_hire_date">Hire date:</string>
    <string name="warning_empty_fields_string">Fadlan buuxi meelaha banaan</string>

    <string-array name="contributionFrequency">
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Annually</item>
    </string-array>

    <string-array name="employeeNames">
        <item>Abdirahman Kasim Hassan</item>
        <item>Aisha Hassan Salad</item>
        <item>Osman Rage Jama</item>
        <item>Salad Hussein Ali</item>
        <item>Daud Ahmed Ali</item>
        <item>Mohamed Abdirahman Ahmed</item>
    </string-array>

    <string-array name="retirementPlans">
        <item>401(k)</item>
        <item>Individual Retirement Accounts</item>
        <item>Profit Sharing</item>
    </string-array>

</resources>